<resources>
    <string name="app_name">来到</string>
    <string name="yes">确定</string>
    <string name="cancel">取消</string>
    <string name="status_text_empty">当前暂无记录</string>
    <string name="loading">加载中</string>
    <string name="connect_fail">网络不给力,请稍后再试</string>
    <string name="main_home">首页</string>
    <string name="main_help">客服</string>
    v<string name="activity">活动</string>
    <string name="main_order">订单</string>
    <string name="main_mine">我的</string>
    <string name="all">全部</string>
    <string name="wait_pay">待付款</string>
    <string name="wait_comment">待评价</string>
    <string name="serving">进行中</string>
    <string name="complete">已完成</string>
    <string name="login">登录</string>
    <string name="edit_verify">请输入验证码</string>
    <string name="edit_phone">请输入手机号</string>
    <string name="feedback">反馈</string>
    <string name="about_us">关于我们</string>
    <string name="check_update">检查更新</string>
    <string name="exit_login">退出登录</string>
    <string name="setting">设置</string>
    <string name="prompt">提示</string>
    <string name="send_captcha">获取验证码</string>
    <string name="input_phone">输入手机号</string>
    <string name="next">下一步</string>
    <string name="input_captcha">输入手机验证码</string>
    <string name="re_send_captcha">重新发送验证码</string>
    <string name="completing_info">完善账户信息</string>
    <string name="login_now">马上登录</string>
    <string name="edit_psw">请输入密码</string>
    <string name="mine">我的</string>
    <string name="show_psw">显示密码</string>
    <string name="new_regist">新用户注册</string>
    <string name="set_nickname">设置账户昵称</string>
    <string name="talk_later">以后再说</string>
    <string name="input_pwd">设置登录密码(不少于6位)</string>
    <string name="input_pwd_again">再次输入密码</string>
    <string name="reset_pwd">设置新密码</string>
    <string name="reset_pwd_success">设置密码成功</string>
    <string name="wait_confirm">待确认</string>
    <string name="wait_serve">待服务</string>
    <string name="comment">评价</string>
    <string name="finished">已完成</string>
    <string name="finish">完成</string>
    <string name="pay">付款</string>
    <string name="go_pay">去支付</string>
    <string name="cancel_order">取消订单</string>
    <string name="delivered">已派单</string>
    <string name="order_accepted">订单已受理</string>
    <string name="order_detail">订单详情</string>
    <string name="contact_store">联系客服</string>
    <string name="cancel_success">取消成功</string>
    <string name="fast_order">快速下单</string>
    <string name="confirm_order">确认下单</string>
    <string name="address">地址</string>
    <string name="name">姓名</string>
    <string name="phone">电话</string>
    <string name="serve_time">服务时间</string>
    <string name="remarks">备注</string>
    <string name="serve_detail">服务详情</string>
    <string name="exit_app">再按一下退出应用</string>
    <string name="order">订单</string>
    <string name="buy_now">立即购买</string>
    <string name="not_set_pwd">尚未设置支付密码</string>
    <string name="video_loading_faild">加载失败</string>
    <string name="click_to_restart">点击重试</string>
    <string name="get_order_fail">获取订单失败</string>
    <string name="save">保存</string>
    <string name="add_address">新增地址</string>
    <string name="edit_address">编辑地址</string>
    <string name="not_enough_goods">库存不足</string>
    <string name="serve_way">服务方式</string>
    <string name="pay_balance">无忧币支付</string>
    <string name="pay_wechat">微信支付</string>
    <string name="add_bank_card_pay">添加银行卡</string>
    <string name="person_info">个人信息</string>
    <string name="ask_help">联系客服</string>
    <string name="wx">微信</string>
    <string name="no_address">您还没有地址</string>
    <string name="reload">重新加载</string>
    <string name="no_order_yet">您目前还没有订单，快去下单吧</string>
    <string name="no_login">您还没有登录</string>
    <string name="canceled">已关闭</string>
    <string name="finish_serve">确认完成</string>
    <string name="please_login">请先登录</string>
    <string name="pay_success">支付成功</string>
    <string name="wu_u_pay">无忧币支付</string>
    <string name="no_function">功能暂未开通</string>
    <string name="not_enough_balance">账户余额不足</string>
    <string name="pay_ali">支付宝支付</string>
    <string name="pay_fail">支付失败,请稍后重试</string>
    <string name="pay_finish">支付完成</string>
    <string name="help_phone">400–111–6160</string>
    <string name="location_error">无法获取您当前位置，请检查位置权限和网络连接</string>
    <string name="update_success">修改成功</string>
    <string name="clear_history">清除历史记录</string>
    <string name="enter_content">请输入内容</string>
    <string name="delete">删除</string>
    <string name="please_input_right_email">请输入正确的邮箱格式</string>
    <string name="nickname_not_right">昵称为4–12个字符</string>
    <string name="get_community_fail">获取社区列表失败</string>
    <string name="pay_method">支付方式</string>
    <string name="pay_online">在线支付</string>
    <string name="order_note">订单留言</string>
    <string name="serve_fee">服务费用</string>
    <string name="door_serve_fee">上门费用</string>
    <string name="update_gender">修改性别</string>
    <string name="choose_pay_method">选择支付方式</string>
    <string name="door_serve">上门服务</string>
    <string name="order_status">订单状态</string>
    <string name="total">合计</string>
    <string name="extra_fee">附加费用</string>
    <string name="go_comment">去评价</string>
    <string name="nickname_wrong">昵称格式不正确</string>
    <string name="photo_choose_fail">图片选择失败，请重新选取图片</string>
    <string name="share_success">分享成功</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败，请重试</string>
    <string name="share_activity">这个活动不错哦，推荐给你，快来参加吧!</string>
    <string name="wx_circle">朋友圈</string>
    <string name="mine_score">我的积分</string>
    <string name="gained_score_record">获取积分记录</string>
    <string name="consume_score_record">获取积分记录</string>
    <string name="total_gained_score">共获取积分</string>
    <string name="total_consume_score">共消耗积分</string>
    <string name="sign_in">签到</string>
    <string name="sign_success">签到成功</string>
    <string name="sign_record">签到记录</string>
    <string name="get_sign_record_fail">获取签到记录失败</string>
    <string name="daily_sign">每日签到</string>
    <string name="app_sign">app签到</string>
    <string name="mine_warn">用户新手礼,仅用于抵扣平台交易所产生的手续费(每笔交易自动扣除), 不可提现,不可以用于其他支付。</string>
    <string name="wrong_qr_code">对不起，该二维码无效</string>
    <string name="no_network">当前无网络连接，请稍后再试</string>
    <string name="confirm_buy">确认购买</string>
    <string name="permession_denied">您禁止了相关权限，某些功能可能无法正常使用</string>
    <string name="scan_payment">扫码支付</string>
    <string name="no_activity">暂无活动</string>
    <string name="create_success">创建账户成功</string>
    <string name="input_what_u_want">请输入您想要搜索的内容</string>
    <string name="block_chain_app">来到链工具</string>
    <string name="backup_pk">备份私钥</string>
    <string name="create_or_import">创建/导入账户</string>
    <string name="create_account">创建账户</string>
    <string name="import_account">导入账户</string>
    <string name="create_account_success">账户创建成功</string>
    <string name="create_account_success_warning">请您在使用前备份账户私钥，一旦丢失不可找回！</string>
    <string name="check_account">查看账户详情</string>
    <string name="pk_format_error">私钥格式不正确！</string>
    <string name="copy_success">复制成功</string>
    <string name="address_list">地址列表</string>
    <string name="address_manager">地址管理</string>
    <string name="current_address_list">您当前的地址列表</string>
    <string name="laidao_social">来到社区</string>
    <string name="choose_city">选择城市</string>
    <string name="address_search">地址搜索</string>
    <string name="address_choose">地址选择</string>
    <string name="bind_new_phone">绑定新手机</string>
    <string name="search">搜索</string>
    <string name="account_name">账户名称：</string>
    <string name="account_name_hint">输入小写字母和1~5位数字组合字符</string>
    <string name="account_pk">账户私钥：</string>
    <string name="phone_num">手机号：</string>
    <string name="captcha">验证码：</string>
    <string name="obtain_captcha">获取验证码</string>
    <string name="captcha_error">验证码不正确！</string>
    <string name="record_account">积分账户</string>
    <string name="manager_account">管理账户</string>
    <string name="record_score">积分收发记录</string>
    <string name="already_sign_up">已签到</string>
    <string name="scan">扫一扫</string>
    <string name="unlock">解锁</string>
    <string name="copy_pk">复制私钥</string>
    <string name="system_rewards">系统奖励</string>
    <string name="no_score">暂无积分记录</string>
    <string name="my_activity_record">我的活动记录</string>
    <string name="score_exchange">积分兑换</string>
    <string name="score_mission">积分任务</string>
    <string name="score_account">积分账户</string>
    <string name="account_info">账户信息</string>
    <string name="get_record_success">积分领取成功</string>
    <string name="account_detail">账户信息</string>
    <string name="transaction_detail">交易信息</string>
    <string name="block_info">区块信息</string>
    <string name="searching">查询中</string>
    <string name="main_net_preview">主网一览</string>
    <string name="block_height">区块高度</string>
    <string name="account_num">账户数</string>
    <string name="transaction">交易</string>
    <string name="score_category">积分种类</string>
    <string name="account">账户</string>
    <string name="transfer_content">交易内容</string>
    <string name="vote_explain">投票说明</string>
    <string name="explain">说明</string>
    <string name="explain_text">1、投票需要质押积分账户里的来到积分，请确保积分账户有余额。如果未创建积分账户，请先创建积分账户，并通过积分任务获取相应的积分。\n 2、参与投票，需要质押一定量的积分，质押的数量可自由决定。投票未结束，质押投票的积分不可进行消费，投票结束后，恢复正常。\n 3、投票比重和所质押投票积分数量有关，质押的积分越多，所占投票比重越大。\n 4、1积分=1张选票，快去做积分任务，获取更多积分吧！</string>
    <string name="vote_step">投票步骤</string>
    <string name="vote_detail">投票详情</string>
    <string name="vote">投票</string>
    <string name="create_time">创建时间</string>
    <string name="end_time">结束时间</string>
    <string name="creator">创建者</string>
    <string name="vote_statistic">投票统计</string>
    <string name="laidao_explore">来到区块链浏览器</string>
    <string name="arrow_left"><![CDATA[<---]]></string>
    <string name="create_vote">创建投票</string>
    <string name="check_db_to_update">检测到区块链数据库升级，需要您重新登录</string>
    <string name="real_name">认证信息</string>
    <string name="please_input_id">请输入身份证号码</string>
    <string name="face_recognition">人脸识别</string>
    <string name="auth_info">认证信息</string>
    <string name="auto_finish">验证通过</string>
    <string name="pledge_score">质押积分</string>
    <string name="upload">上传</string>
    <string name="trace_auth">溯源认证</string>
    <string name="time_bank">时间银行</string>
    <string name="project_detail">项目详情</string>
    <string name="project_record">项目记录</string>
    <string name="no_project_record">暂无项目记录</string>
    <string name="volunteer_project">志愿项目</string>
    <string name="apply_success">报名成功</string>
    <string name="tb_wait_rewards">时间币待领取</string>
    <string name="tb_already_rewards">时间币已领取</string>
    <string name="to_sign_up">去签到</string>
    <string name="upload_success">上传成功</string>
    <string name="auth_success">认证成功</string>
    <string name="auth_ing">系统繁忙，认证中</string>
    <string name="auth_fail">认证失败</string>
    <string name="already_auth">已认证</string>
    <string name="zfb_pfa">支付宝代付</string>
    <string name="wx_pfa">微信代付</string>


</resources>
