<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/main_home_layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/main_home"
            android:layout_width="45dp"
            android:layout_height="30dp"
            android:background="@mipmap/home_selected" />

        <TextView
            android:id="@+id/main_home_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/main_home"
            android:textColor="@color/night_blue"
            android:textSize="@dimen/dimens_12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_order_layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/main_order"
            android:layout_width="45dp"
            android:layout_height="30dp"
            android:background="@mipmap/order" />

        <TextView
            android:id="@+id/main_order_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/main_order"
            android:textColor="@color/common_dark"
            android:textSize="@dimen/dimens_12sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/main_help_layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/main_help"
            android:layout_width="45dp"
            android:layout_height="30dp"
            android:background="@mipmap/help" />

        <TextView
            android:id="@+id/main_help_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/main_help"
            android:textColor="@color/main_tab"
            android:textSize="@dimen/dimens_12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/maim_mine_layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/main_mine"
            android:layout_width="45dp"
            android:layout_height="30dp"
            android:background="@mipmap/profile" />

        <TextView
            android:id="@+id/main_mine_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/main_mine"
            android:textColor="@color/main_tab"
            android:textSize="@dimen/dimens_12sp" />
    </LinearLayout>
</LinearLayout>