<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/real_name"
        android:textSize="@dimen/dimens_18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_height"
        android:gravity="center"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="真实姓名:" />

        <TextView
            android:id="@+id/tv_kyc_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:background="@null"
            tool:text="hsss" />

    </LinearLayout>

    <include layout="@layout/split_line_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="身份证号:" />

        <TextView
            android:id="@+id/tv_kyc_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:background="@null"
            android:hint="@string/please_input_id" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:background="@color/white">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/face_recognition"
            android:textSize="@dimen/dimens_18sp" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="48dp"
            android:layout_gravity="center_horizontal"
            android:background="@mipmap/kyc_pass" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="验证通过"
            android:textSize="@dimen/dimens_18sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="恭喜您已完成KYC认证"
            android:layout_marginBottom="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"/>
    </LinearLayout>


</LinearLayout>